--- a/packages/web/src/modules/Chat/ChatInput.less
+++ b/packages/web/src/modules/Chat/ChatInput.less
@@ -1,7 +1,9 @@
 @import '../../styles/variable.less';
 
 .chatInput {
-    height: 70px;
+    height: auto;
+    min-height: 70px;
+    max-height: 50vh;
     background-color: rgba(255, 255, 255, 0.5);
     display: flex;
     align-items: center;
@@ -56,7 +58,12 @@
     flex: 1;
     padding: 0px 8px;
     height: 32px;
-    line-height: 32px;
+    max-height: calc(50vh - 20px);
+    min-height: 32px;
+    margin-top: 10px;
+    margin-bottom: 10px;
+    padding-top: 9px;
+    line-height: 20px;
     outline: none;
     border: 1px solid rgba(208, 208, 208, 0.5);
     font-size: 14px;
@@ -70,8 +77,8 @@
 
 .tooltip {
     position: absolute;
-    right: 10px;
-    top: 5px;
+    right: 5px;
+    top: 15px;
     font-size: 22px;
     color: #aaa;
 }
